--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "elite-discord-bot",
+  "name": "lilbot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Discord bot for lilPotates server",
   "main": "src/index.ts",
   "scripts": {
     "start": "npm run build && node build/index.js",
@@ -10,14 +10,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "lilBunnyRabbit",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LittleBunnyRabbit/lilBot-v2"
+  },
   "license": "ISC",
   "dependencies": {
     "@types/ws": "^7.2.6",
     "canvas": "^2.6.1",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "got": "^11.5.2",
-    "yaml": "^1.10.0"
+    "got": "^11.5.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
