Mongodb + birthday command

--- a/src/config/commands_config.json
+++ b/src/config/commands_config.json
@@ -3,6 +3,7 @@
         "name": "TEST",
         "description": "Test command",
         "is_admin": false,
+        "is_master": false,
         "disabled": false,
         "delete_message": false,
         "uses": [],
@@ -12,6 +13,7 @@
         "name": "CANVAS",
         "description": "CANVAS command",
         "is_admin": false,
+        "is_master": false,
         "disabled": false,
         "delete_message": false,
         "uses": [],
@@ -21,6 +23,17 @@
         "name": "HELP",
         "description": "HELP command",
         "is_admin": false,
+        "is_master": false,
+        "disabled": false,
+        "delete_message": false,
+        "uses": [],
+        "channels": []
+    },
+    "command_birthday": {
+        "name": "BDAY",
+        "description": "BIRTHDAY command",
+        "is_admin": false,
+        "is_master": false,
         "disabled": false,
         "delete_message": false,
         "uses": [],
