--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/ws": "^7.2.6",
+    "@types/mongodb": "^3.5.25",
     "canvas": "^2.6.1",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "got": "^11.5.2"
+    "got": "^11.5.2",
+    "mongodb": "^3.5.9"
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
